# smqSAM

./: CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  compile_commands.json
src/: CMakeLists.txt  File.h  Log.h  cppMaker.cpp  glsl.cpp  hMaker.cpp  include.h  main.cpp  smf.cpp
src/ExternMakers/: sam.cpp  sam.h
src/control/: control.cpp  control.h
src/glsl/: glsl.cpp  glsl.h  toCpp.cpp  toH.cpp
src/img/: img.cpp  img.h  toCpp.cpp  toH.cpp
src/other/: BetherCam.cpp  BetherCam.h
src/resources/: config.conf  config.json  glsl.conf  glsl.json  img.conf  img.json  plane.smf  smf.conf  smf.json
src/resources/assets/: ball.fbx  basic_fs.glsl  basic_vs.glsl  cube.fbx  fps.fbx  models.blend  no_mvp_vs.glsl  plane.fbx  pulka.fbx  shelf.fbx
src/resources/assets/Shaders/: basic_fs.glsl  basic_vs.glsl  pass_fs.glsl  post_fs.glsl  post_vs.glsl  shadow_fs — kopia.glsl  shadow_fs.glsl  shadow_vs — kopia.glsl  shadow_vs.glsl
src/smf/: smf.cpp  smf.h  toCpp.cpp  toH.cpp
